subscribe: fix subheading overflow

--- a/src/scss/_aboutUs.scss
+++ b/src/scss/_aboutUs.scss
@@ -100,5 +100,9 @@
 				}
 			}
 		}
+
+		@media (max-width: 550px) {
+			border: 5px solid #ffbc36;
+		}
 	}
 }
