--- a/src/scss/common/_heading.scss
+++ b/src/scss/common/_heading.scss
@@ -18,11 +18,23 @@
 
 %subHeading {
 	text-align: center;
-	margin: 0 auto;
-	// max-width: 90%;
 	font-weight: 500;
-	font-size: 34px;
+	font-size: 3.4rem;
 	color: #ffbc36;
+
+	@media (max-width: 1200px) {
+		font-size: 3rem;
+	}
+	@media (max-width: 990px) {
+		font-size: 2.8rem;
+	}
+
+	@media (max-width: 700px) {
+		font-size: 2.5rem;
+	}
+	@media (max-width: 400px) {
+		font-size: 2.3rem;
+	}
 }
 
 %heading2 {
